--- a/php/style/indexstyle.css
+++ b/php/style/indexstyle.css
@@ -535,3 +535,11 @@ color: #B23C3C;
 #imageData #bottomNavClose{ width: 66px; float: right;  padding-bottom: 0.7em; outline: none;}	 	
 
 #overlay{ position: absolute; top: 0; left: 0; z-index: 90; width: 100%; height: 500px; background-color: #000; }
+.developedby{
+	font-family: sans-serif;
+	font-weight: bold;
+}
+.developedby-logo{
+	height: 20px; 
+	vertical-align: middle;
+}
